# plainbook

./: .gitignore  CLAUDE.md  DEVELOP.md  ISSUE_install_failure_python39.md  Log.md  PRIVACY_POLICY_AND_TERMS_OF_SERVICE.md  README.md  SUMMARY_OF_CHANGES.md  TODO.md  TestGeneration.md  TestImprovements.md  Testplan.md  main.py  notebook.nlb  pyproject.toml  requirements.txt
css/: README.md  main.css.map  package.json
examples/: Soccer.plnb  football.plb
js/: CodeCell.js  ExplanationEditor.js  MarkdownCell.js  OutputRenderer.js  nb.js
nlbook/: gemini.py  main.py  nlbook.py
nlbook.egg-info/: PKG-INFO
nlbook/css/: main.css  main.css.map  main.scss  package-lock.json
nlbook/js/: CodeCell.js  ExplanationEditor.js  MarkdownCell.js  nb.js
nlbook/views/: index.html
plainbook/: __init__.py  action_log.py  ai_common.py  claude.py  gcs_upload.py  gemini.py  gemini_oauth.py  main.py  plainbook.py  plainbook_base.py  plainbook_jupyter.py  plainbook_snapshot_kernel.py
plainbook/css/: main.css  main.css.map  main.scss  prism.min.css
plainbook/js/: AppNavbar.js  CellInsertionZone.js  CellLabel.js  CellStateButton.js  CodeCell.js  ExplanationEditor.js  HistoryCellView.js  HistoryEntryPanel.js  HistoryReplay.js  HistoryTimeline.js  HistoryViewer.js  InfoModal.js  InputFile.js  InstructionsPanel.js  MarkdownCell.js  NotebookCell.js  NotebookHelp.js  OutputRenderer.js  PanelBar.js  SettingsModal.js  TestHelpModal.js  UiError.js  (+6 more)
tests/: conftest.py  prova.ipynb  soccer.plnb  test_action_log.py  test_plainbook.py  test_plainbook_snapshot_kernel.py
views/: index.html
(+13 files in other folders)
